// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cart /> tests should apply correct rule 1`] = `
<div>
  <div
    class="cartItem my-1"
  >
    <span>
      Toilet Paper
    </span>
    <span>
      x 
      2
    </span>
    <span>
      £
      4
    </span>
    <button
      class="btn btn-link"
      type="button"
    >
      Remove
    </button>
  </div>
  <div
    class="my-4"
  >
    Total: £
    4
  </div>
</div>
`;

exports[`<Cart /> tests should render CartList with correct props 1`] = `
<div>
  <div
    class="cartItem my-1"
  >
    <span>
      Face Mask
    </span>
    <span>
      x 
      2
    </span>
    <span>
      £
      8
    </span>
    <button
      class="btn btn-link"
      type="button"
    >
      Remove
    </button>
  </div>
  <div
    class="cartItem my-1"
  >
    <span>
      Toilet Paper
    </span>
    <span>
      x 
      2
    </span>
    <span>
      £
      8
    </span>
    <button
      class="btn btn-link"
      type="button"
    >
      Remove
    </button>
  </div>
  <div
    class="my-4"
  >
    Total: £
    16
  </div>
</div>
`;
